# duq-tracing

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
go/: go.mod
go/tracing/: context.go  context_test.go  middleware.go  models.go  models_test.go  publisher.go
python/: README.md  pyproject.toml
python/duq_tracing/: __init__.py  a2a.py  context.py  middleware.py  models.py  publisher.py
python/duq_tracing/otel/: __init__.py  config.py  decorators.py  exporter.py  middleware.py  publisher.py
python/jarvis_tracing/: __init__.py  decorators.py  middleware.py  models.py  publisher.py
python/jarvis_tracing/otel/: __init__.py  config.py  decorators.py  exporter.py  middleware.py  publisher.py
python/tests/: test_a2a_tracer.py  test_context.py  test_decorators.py  test_middleware.py  test_models.py  test_publisher.py
